--- a/fantacode.html
+++ b/fantacode.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="fantacode.css">
 </head>
 <body>
+    <style>
+        th{
+    color: rgba(48,148,224,255);
+    font-size: 25px;
+    font-family: 'Alumni Sans Collegiate One', sans-serif;
+    text-decoration: underline,dotted ;
+    text-shadow: 2px 2px 2px rgb(202, 196, 196);
+}
+td{
+    color: rgba(87,87,87,255);
+}
+    </style>
 <div>
     <table border="5px" cellpadding="25px" cellspacing="2px">
         <tr>
